--- a/dist.ini
+++ b/dist.ini
@@ -8,3 +8,8 @@ fake_release = 0
 no_git=0
 stopwords = shantanu 
 stopwords = bhadoria
+stopwords = GyroScope
+stopwords = getRawReading
+stopwords = CBus
+stopwords = CBusDevicePath
+
