--- a/dist.ini
+++ b/dist.ini
@@ -12,4 +12,15 @@ stopwords = GyroScope
 stopwords = getRawReading
 stopwords = CBus
 stopwords = CBusDevicePath
+stopwords = CDevice
+stopwords = CDeviceAddress
+stopwords = Containd
+stopwords = XZero
+stopwords = YZero
+stopwords = ZZero
+stopwords = atleast
+stopwords = getReading
+stopwords = gyroscopeGain
+stopwords = lastReadingTime
+stopwords = timeDrift
 
