--- a/dist.ini
+++ b/dist.ini
@@ -22,4 +22,9 @@ stopwords = getReading
 stopwords = gyroscopeGain
 stopwords = lastReadingTime
 stopwords = timeDrift
+stopwords = getReadingDegreesPerSecond
+stopwords = getReadingRadiansPerSecond
+stopwords = xZero
+stopwords = yZero
+stopwords = zZero
 
