Moved extends, added stopwords for spell checks

--- a/dist.ini
+++ b/dist.ini
@@ -27,4 +27,6 @@ stopwords = getReadingRadiansPerSecond
 stopwords = xZero
 stopwords = yZero
 stopwords = zZero
+stopwords = accelerometer
+stopwords = radians
 
